<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/color_gray_d"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|center"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="80dp"
                android:text="养生登录"
                android:textColor="@color/color_black"
                android:textSize="50sp" />


            <EditText
                android:id="@+id/login_et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/reg_username"
                android:singleLine="true"
                android:selectAllOnFocus="false"
                android:textColor="@color/color_black" />

            <EditText
                android:id="@+id/login_et_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/reg_pass"
                android:inputType="textPassword"
                android:singleLine="true"
                android:selectAllOnFocus="false"
                android:textColor="@color/color_black" />

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button"
                android:text="@string/login"
                android:textColor="@color/color_white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="@color/color_black"
                android:textSize="18sp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>