<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btn_finish"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.5"
            android:background="@color/color_blue_1"
            android:padding="10dp"
            android:src="@mipmap/back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="5"
            android:background="#0DBDD1"
            android:padding="10dp"
            android:text="@string/reg_title"
            android:textColor="#fff"
            android:textSize="20sp" />

    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/dp_15">


            <TableRow android:padding="@dimen/margindp_5">

                <TextView
                    android:id="@+id/tv_acc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/reg_username"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/et_acc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:textSize="20sp"
                    android:inputType="text"
                    android:hint="@string/reg_username"/>

            </TableRow>

            <TableRow android:padding="5dp">

                <TextView
                    android:id="@+id/tv_pass"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/reg_pass"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/et_pass"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:hint="6位以上 11位以下"
                    android:inputType="textPassword"
                    android:textSize="20sp" />

            </TableRow>

            <TextView
                android:id="@+id/wrong_psw"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="invisible" />

            <TableRow
                android:gravity="center"
                android:padding="@dimen/margindp_5">

                <TextView android:layout_weight="1" />

                <Button
                    android:id="@+id/btn_commit"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="2"
                    android:background="@drawable/button"
                    android:text="@string/reg_com"
                    android:textSize="22sp"
                    android:textColor="@color/color_white"/>

                <TextView android:layout_weight="1" />
            </TableRow>

        </TableLayout>
    </ScrollView>
</LinearLayout>